--- a/app/src/main/res/layout/news_card_item.xml
+++ b/app/src/main/res/layout/news_card_item.xml
@@ -36,6 +36,7 @@
                 tools:text="title" />
 
             <TextView
+                android:textStyle="bold"
                 android:id="@+id/section_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -45,10 +46,19 @@
                 tools:text="section"/>
 
             <TextView
-                android:id="@+id/author_card"
+                android:id="@+id/trail_text_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/section_card"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                tools:text="trailText"/>
+
+            <TextView
+                android:id="@+id/author_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/trail_text_card"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 tools:text="author"/>
