--- a/app/src/main/res/layout/news_card_item.xml
+++ b/app/src/main/res/layout/news_card_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:background="@color/color_background"
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.CardView
@@ -48,14 +49,21 @@
             <TextView
                 android:id="@+id/trail_text_card"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@+id/thumbnail_image_card"
                 android:layout_below="@+id/section_card"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-light"
+                android:maxLines="6"
+                android:textSize="16sp"
                 tools:text="trailText"/>
 
             <TextView
                 android:id="@+id/author_card"
+                android:textStyle="italic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trail_text_card"
@@ -67,15 +75,15 @@
                 android:id="@+id/date_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@id/author_card"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 tools:text="date"/>
 
             <ImageView
                 android:id="@+id/thumbnail_image_card"
-                android:layout_width="160dp"
-                android:layout_height="140dp"
+                android:layout_width="140dp"
+                android:layout_height="120dp"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/title_card"
                 android:scaleType="centerCrop"
