--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="swipe_color_2">#03A9F4</color>
     <color name="swipe_color_3">#FFC107</color>
     <color name="swipe_color_4">#FF5722</color>
+
+    <color name="color_background">#063276</color>
+    <color name="color_white">#FFFFFF</color>
 </resources>
